fix: update z-index clock

--- a/frontend/src/styles/schedule.css
+++ b/frontend/src/styles/schedule.css
@@ -306,7 +306,6 @@
 
 .sf-clock-card {
   position: relative;
-  z-index: 1;
   display: grid;
   place-items: center;
   align-content: center;
@@ -318,16 +317,20 @@
 }
 
 .sf-clock-time {
+  position: relative;
   font-size: 20px;
   font-weight: 600;
   line-height: 1;
+  z-index: 2;
 }
 
 .sf-clock-label {
+  position: relative;
   font-size: 10px;
   font-weight: 400;
   line-height: 1;
   text-transform: uppercase;
+  z-index: 2;
 }
 
 .sf-clock-card:nth-child(2) .sf-clock-label {
@@ -338,7 +341,7 @@
   position: absolute;
   right: -5px;
   top: 18px;
-  z-index: -1;
+  z-index: 0;
   width: 10px;
   height: 24px;
   border-radius: 20px;
